# RoundedSBE

./: CMakeLists.txt  README.md  breeze.json  breezebutton.cpp  breezedecoration.cpp  breezesettingsdata.kcfg  install.sh  uninstall.sh
config/: breezeconfigwidget.cpp  breezeexceptiondialog.cpp  roundedsbeconfig.desktop
config/ui/: breezeconfigurationui.ui  breezeexceptiondialog.ui
cornersshader/: CMakeLists.txt  cornersshader.cpp  cornersshader.h  cornersshader.json
cornersshader/shaders_110/: cornersshader.frag
cornersshader/shaders_140/: cornersshader.frag
libbreezecommon/: CMakeLists.txt  breezedecorationhelper.cpp  breezedecorationhelper.h  breezeexceptionlist.cpp  breezeexceptionlist.h  breezesettingsprovider.cpp  breezesettingsprovider.h
